--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body background="burger.jpg">
     <div id="burg0">
       <h1>Les Meilleurs Burgers du Monde</h1>
-      <h2>les voitures c'est encore mieux</h2>
+      <h2>les voitures c'est trooooop cooollllll</h2>
           <p>Has autem provincias, quas Orontes ambiens amnis imosque pedes Cassii
           montis illius celsi praetermeans funditur in Parthenium mare, Gnaeus
           Pompeius superato Tigrane regnis Armeniorum abstractas dicioni Romanae coniunxit.</p>
