--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@
     <link rel="stylesheet" href="style.css">
     <title>HomePageBurger</title>
   </head>
-  <body background="burger.jpg">
+  <body>
     <div id="burg0">
       <h1>Les Meilleurs Burgers du Monde</h1>
-      <h2>les voitures c'est encore mieux</h2>
           <p>Has autem provincias, quas Orontes ambiens amnis imosque pedes Cassii
           montis illius celsi praetermeans funditur in Parthenium mare, Gnaeus
           Pompeius superato Tigrane regnis Armeniorum abstractas dicioni Romanae coniunxit.</p>
